.helm/templates/vocascan-db-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml -o ./.helm/templates
    kompose.controller.type: statefulset
    kompose.service.nodeport.port: "32432"
    kompose.service.type: nodeport
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: vocascan-db
  name: vocascan-db
spec:
  ports:
    - name: "32432"
      nodePort: 32432
      port: 32432
      targetPort: 5432
  selector:
    io.kompose.service: vocascan-db
  type: NodePort
status:
  loadBalancer: {}
